--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: Guo's Blog                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Solutions.   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -12,23 +12,23 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://guojiacheng20000327.github.io'
 
-author: your_full_name                  # change to your full name
+author: Jiacheng Guo                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: guojiacheng20000327             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: Guojiacheng0327            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Jiacheng Guo                  # it will shows as the copyright owner in Footer
+  email: guojiacheng20000327@vip.qq.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/Guojiacheng0327      # change to your twitter homepage
+    - https://github.com/guojiacheng20000327       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
